--- a/public/css/style.css
+++ b/public/css/style.css
@@ -291,7 +291,7 @@ button:hover{
     top: -15px;
 }
 
-/*---------------------------productos.html----------------------------------*/
+/*---------------------------productos.html----------------------------------
 
 .section_productos {
   
@@ -360,6 +360,90 @@ div.img img {
     width: 150px;
     height: 30px;
 }
+
+---------------------------------------------------------------------*/
+.mainComidas #galeria .col-lg-4 {
+  margin: 0 ;
+  padding: 25px;
+}
+
+.mainComidas #galeria img {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+}
+
+.mainComidas #galeria img:hover {
+  border: 5px solid white;
+}
+
+.mainComidas .card-title {
+  color: black;
+  border: solid;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 30px;
+}
+
+.mainComidas #btnradio2:checked ~ .row > .Paletas{
+  display: none;
+}
+
+.mainComidas #btnradio2:checked ~ .row > .Tortas {
+  display: none;
+}
+
+.mainComidas #btnradio2:checked ~ .row > .Alfajores {
+  display: none;
+}
+
+.mainComidas #btnradio3:checked ~ .row > .Helados {
+  display: none;
+}
+
+.mainComidas #btnradio3:checked ~ .row > .Tortas {
+  display: none;
+}
+
+.mainComidas #btnradio3:checked ~ .row > .Alfajores {
+  display: none;
+}
+
+.mainComidas #btnradio4:checked ~ .row > .Helados {
+  display: none;
+}
+
+.mainComidas #btnradio4:checked ~ .row > .Paletas {
+  display: none;
+}
+
+.mainComidas #btnradio4:checked ~ .row > .Alfajores {
+  display: none;
+}
+
+.mainComidas #btnradio5:checked ~ .row > .Helados {
+  display: none;
+}
+
+.mainComidas #btnradio5:checked ~ .row > .Paletas {
+  display: none;
+}
+
+.mainComidas #btnradio5:checked ~ .row > .Tortas {
+  display: none;
+}
+
+
+
+.mainComidas .btn {
+  padding-left: 130px;
+  padding-right: 130px;
+  color: black;
+  border: solid cadetblue;
+  background-color: cadetblue;
+}
+
+
 
 /*---------------------------barra de busqueda----------------------------------*/
 
