--- a/views/home.html
+++ b/views/home.html
@@ -151,63 +151,59 @@
       <h4 class="texto_home_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
       <h4 class="texto_home_4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
   </section>
+  <footer>
 
-
-
-
-
-  <footer class="footer-distributed">
-
-    <div class="footer-left">
-      <img class="logof" src="/images/logo_helartico.png">
-
-      <h3 class="titulo_footer">HELÁRTICO</h3>
-
-      <p class="footer-links">
-        <a href="/" class="link-1">Inicio</a>
+    <ul>
+        <li>
         
-        <a href="/productos">Productos</a>
-      
-        <a href="/sabores">Sabores</a>
-      
-        <a href="#">Locales</a>
+            <div class="footer-left">
+              <img class="logof" src="/images/logo_helartico.png">
         
-        <a href="#">Contacto</a>
+              <h3 class="titulo_footer">HELÁRTICO</h3>
         
-      </p>
-    </div>
+              <p class="footer-links">
+                <a href="/" class="link-1">Inicio</a>
+                
+                <a href="/productos">Productos</a>
+              
+                <a href="/sabores">Sabores</a>
+              
+                <a href="#">Locales</a>
+                
+                <a href="#">Contacto</a>
+                
+              </p>
+            </div>
 
-    <div class="footer-right">
+        </li>
+        <li>
+  
+              <p class="footer-company-about">
+                <span>Novedades</span>
+                <span>Recibí promociones y beneficios exclusivos:</span>
+                <input class="emailf" type="text" value="Email">
+                <button class="botonf"></button>
+              </p>
+        </li>
 
-      <p class="footer-company-about">
-        <span>Novedades</span>
-        <span>Recibí promociones y beneficios exclusivos:</span>
-        <input class="emailf" type="text" value="Email">
-        <button class="botonf"></button>
-      </p>
-
-
-    </div>
-
-    <div class="footer-center">
-      <p class="footer-company-about">
-      <span>Redes sociales</span>
-      <span>Seguinos en:</span>
-    </p>
+        <li>
+            
+          <p class="footer-company-about">
+            <span>Redes sociales</span>
+            <span>Seguinos en:</span>
+          </p>
+            
       
+              <a href=""><img class="iconos" src="/images/logo face.png" alt=""></i></a>
+              <a href="#"><img class="iconos" src="/images/logo ig.png" alt=""></i></a>
+              <a href="#"><img class="iconos" src="/images/logo wpp.png" alt=""></a>
+        </li>
+        
+    </ul>
+    <h5 class="footer-final">© 2022 Helartico S.R.L.</h5>
 
-        <a href=""><img class="iconos" src="/images/logo face.png" alt=""></i></a>
-        <a href="#"><img class="iconos" src="/images/logo ig.png" alt=""></i></a>
-        <a href="#"><img class="iconos" src="/images/logo wpp.png" alt=""></a>
+</footer>
 
-      
 
-      
-
-    </div>
-
-    
-
-  </footer>
-
+  
 </html>
