--- a/views/home.html
+++ b/views/home.html
@@ -79,7 +79,7 @@
       <hr>
       <h3>Total:    $ </h3>
       <button class="btn ver-pedido" type= "button" >Ver pedido</button><br>
-      <button class="btn terminar-pedido" type="button" >Terminar pedido</button>
+      <a href="/pedidos"><button class="btn terminar-pedido" type="button" >Terminar pedido</button></a>
 
 
 
