--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -102,7 +103,7 @@
 
 </header>
 
-<main class="mainComidas">
+<main class="main_productos mainComidas">
 
 
   <section id="galeria" class="container btn-group-vertical">
@@ -124,9 +125,6 @@
       <label class="btn boton-alfajores " for="btnradio5">Alfajores</label>
 
    
-   
-    
-
 
 
       <div class="row">
@@ -275,12 +273,12 @@
 
 
 
-      </div>
-        
-
-
-
-        
+      </div> 
         
     </section>
+    
   </main>
+  <footer>
+  <%- include('./partials/footer') %>
+</footer>
+</html>
