--- a/views/sabores.ejs
+++ b/views/sabores.ejs
@@ -135,11 +135,9 @@ Nuestro dulce de leche está elaborado especialmente para crear el sabor más te
  </div>
          
 </main>
-
 <footer>
-
+<%- include('./partials/footer') %>
 </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
   </script>
