--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -25,7 +25,7 @@
       <ul>
         <li>
           <h4> 
-          <a href="/">Inicio</a>
+          <a href="/">Inicioo</a>
          </h4>
         </li>
         <li>
