--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <header>
-    <img class="logo ubicar" src="/images/logo_helartico.png">
+
+   <img class="logo ubicar" src="/images/logo_helartico.png">
     <nav>
       <ul>
         <li>
@@ -60,8 +61,29 @@
       <button class="btn ver-pedido" type= "button" >Ver pedido</button><br>
       <a href="/pedidos"><button class="btn terminar-pedido" type="button" >Terminar pedido</button></a>
 
+
+
+
   </div>
 </div>
-    <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i></a>   
+          
+    <div class="overlay">
+  <h1>HELÁRTICO</h1>
+  <h3>1000 razones para elegirnos</h3>
+  
+  
+    <br>
+    <button class="button_carrusel"><h5>SOBRE NOSOTROS</h5></button>
+      </div>
 
- </header>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+   <div>
+
+    <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i>
+    </a>   
+    
+  
+   </div>
+
+</header>
