--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -3,103 +3,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="/css/style.css" rel="stylesheet">
-    <title>HELÁRTICO</title>
-    <link rel="icon" href= "/images/pixlr-bg-result.png" />
-    <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel = ”stylesheet” href = ”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css”>
+    <%- include('./partials/head') %>
 </head>
 
 
 <header>
-
-  <img class="logo ubicar" src="/images/logo_helartico.png">
-  <nav>
-    <ul>
-      <li>
-        <h4> 
-        <a href="/">Inicio</a>
-       </h4>
-      </li>
-      <li>
-        <h4>
-        <a href="/productos">Productos</a>
-        </h4>
-      </li>
-      <li>
-        <h4>
-        <a href="/sabores">Sabores</a>
-        </h4>
-      </li>
-      <li>
-        <h4>
-        <a href="">Locales</a>
-        </h4>
-      </li>
-      <li>
-        <h4>
-        <a href="">Contacto</a>
-        </h4>
-      </li>
-      <li>
-        <h4>
-        </h4>
-      </li>
-    </ul>
-  </nav>
-        <a> 
-          <img class="carrito size" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="/images/shopping-cart.png">
-        </a>
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-<div class="offcanvas-header">
-  <h3 id="offcanvasRightLabel">Tu pedido</h3>
-  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-</div>
-<div class="offcanvas-body">
-  <img class="carrito2" src="/images/alfajor.png" alt="foto-compra"> 
-  <div class="descripcion">
-  <h3 class="producto">Producto</h3>
-  <h4>$000</h4>
-  <label for="cantidad">Cantidad:</label>
-      <select name="cantidad" id="cantidad">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-      </select>
-    </div>
-    <br>
-    <hr>
-    <h3>Total:    $ </h3>
-    <button class="btn ver-pedido" type= "button" >Ver pedido</button><br>
-    <button class="btn terminar-pedido" type="button" >Terminar pedido</button>
-
-
-
-
-</div>
-</div>
-        
-  <div class="overlay">
-<h1>HELÁRTICO</h1>
-
-
- <div>
-
-  <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i>
-  </a>   
-  
-
- </div>
+<%- include('./partials/header') %>
 
 </header>
 
@@ -278,7 +187,9 @@
     </section>
     
   </main>
-  <footer>
-  <%- include('./partials/footer') %>
+
+<footer>
+<div class="footer_productos"><%- include('./partials/footer') %></div>
 </footer>
+
 </html>
