--- a/src/views/sabores.ejs
+++ b/src/views/sabores.ejs
@@ -2,17 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="/css/style.css" rel="stylesheet">
-    <title>HELÁRTICO</title>
-    <link rel="icon" href= "/images/pixlr-bg-result.png" />
+    <%- include('./partials/head') %>
 </head>
 
 
@@ -135,9 +125,11 @@ Nuestro dulce de leche está elaborado especialmente para crear el sabor más te
  </div>
          
 </main>
+
 <footer>
-<%- include('./partials/footer') %>
+<div class="footer_sabores"><%- include('./partials/footer') %></div>
 </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
   </script>
