--- a/src/views/usuario.ejs
+++ b/src/views/usuario.ejs
@@ -11,7 +11,7 @@
  
   <link rel="stylesheet" href="/css/estilo-form.css">
   <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
-  
+</head>
  
   <title>Login</title>
 
