--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -46,13 +46,13 @@
           </a>
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
-    <h3 id="offcanvasRightLabel">Tu pedido</h3>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <h3 class="texto_h3" id="offcanvasRightLabel">Tu pedido</h3>
+    <button type="button_home" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     <img class="carrito2" src="/images/alfajor.png" alt="foto-compra"> 
     <div class="descripcion">
-    <h3 class="producto">Producto</h3>
+    <h3 class="producto texto_h3">Producto</h3>
     <h4>$000</h4>
     <label for="cantidad">Cantidad:</label>
         <select name="cantidad" id="cantidad">
@@ -75,12 +75,12 @@
 </div>
           
     <div class="overlay">
-  <h1>HELÁRTICO</h1>
-  <h3>1000 razones para elegirnos</h3>
+  <h1 class="titulo_home">HELÁRTICO</h1>
+  <h3 class="texto_h3">1000 razones para elegirnos</h3>
   
   
     <br>
-    <button class="button_carrusel"><h5>SOBRE NOSOTROS</h5></button>
+    <button class="button_carrusel"><h5 class="texto_home_f">SOBRE NOSOTROS</h5></button>
       </div>
 
 
@@ -133,10 +133,10 @@
       <img class="postre_home_2 " src="./images/postre helado 3.jpg" alt="">
       <img class="postre_home_2 " src="./images/alfajor helado.jpg" alt="">
 
-      <h4 class="texto_home_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
-      <h4 class="texto_home_2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
-      <h4 class="texto_home_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
-      <h4 class="texto_home_4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
+      <h4 class="texto_home_1 texto_home_fh">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
+      <h4 class="texto_home_2 texto_home_fh">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
+      <h4 class="texto_home_3 texto_home_fh">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
+      <h4 class="texto_home_4 texto_home_fh">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
   </section>
 
   
