--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="/css/style.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="/css/estilo.css">
     <link rel="stylesheet" href="/css/dekopt.css">
     <title>HELÁRTICO</title>
     <link rel="icon" href= "/images/pixlr-bg-result.png" />
