--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -102,7 +102,7 @@
  </div>
 
 </header>
-
+<a href="/productos/create" class="btn btn-danger">Crear nuevo producto</a>
 <main class="main_productos mainComidas">
 
 
@@ -123,157 +123,27 @@
 
        <input type="radio" class="btn-check" name="btnradio" id="btnradio5" >
       <label class="btn boton-alfajores " for="btnradio5">Alfajores</label>
-
-   
-
-
+     
+      
       <div class="row">
-
+        <% products.forEach( prod => { %>
          <div class="col-lg-4 col-md-6 col-md-12 Helados">
-            <img src="images/kilo.png" alt="Helado">
+          <img src= "images/<%= prod.imagen %>">
             <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1 KG</h5>
-              <h5 class="flex-grow-30">$1.250</h5>
+              <h5 class="flex-grow-30">
+                  <%= prod.nombre %> 
+              </h5>
+              <h5 class="flex-grow-30">
+                <%= prod.precio %>
+                </h5>
+              
+              
               <a href="/administrador"><button class=" boton">Editar producto</button></a>
               <a href=""><button class="boton">Añadir al carrito</button></a>
             </div>
           </div>
+          <% } ) %>
 
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Helados">
-              <img src="images/cuarto.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/2 KG - HASTA 3 GUSTOS</h5>
-              <h5 class="flex-grow-30">$850</h5>
-              <button class="boton">Añadir al carrito</button>
-              </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Helados">
-              <img src="images/medio-kilo.png" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/almendrado.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Paletas">
-              <img src="images/paleta1.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Paletas">
-              <img src="images/paleta2.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Alfajores">
-              <img src="images/alfajor.png" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/foto4.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/foto5.png" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/foto6.png" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/foto7.png" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Alfajores">
-              <img src="images/franui1.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 col-md-12 Tortas">
-              <img src="images/torta-oreo.jpg" alt="">
-              <div class="img container-flex-box">
-              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
-              <h5 class="flex-grow-30">$450</h5>
-              <button class="boton">Añadir al carrito</button>
-            </div>
-          </div>
-
-
-
-      </div> 
         
     </section>
     
